--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,24 +1,11 @@
-attrs==19.3.0
 beautifulsoup4==4.12.3
 certifi==2024.12.14
-chardet==5.2.0
 charset-normalizer==3.4.1
-docopt==0.6.2
-gitdb==4.0.11
-GitPython==3.1.43
 idna==3.10
-mistune==3.0.2
-pendulum==3.0.0
-Pillow==11.0.0
-python-dateutil==2.9.0.post0
-pytzdata==2020.1
+pillow==11.0.0
 PyYAML==6.0.2
 requests==2.32.3
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.12
-six==1.17.0
-smmap==5.0.1
 soupsieve==2.6
-specktre==0.3.0
-typing_extensions==4.12.2
 urllib3==2.3.0
