--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,4 +1,3 @@
-# yaml-language-server: $schema=../../public/schemas/books.schema.json
 - list: 2025
   goal: 18
   books:
@@ -9,9 +8,9 @@
       cover_height: 2560
       cover_width: 1693
       link: https://www.penguinrandomhouse.com/books/297276/amusing-ourselves-to-death-by-neil-postman/
-      date_finished: null
-      recommended: false
-      progress: 59
+      date_finished: 2025-01-20
+      recommended: true
+      progress: 100
 
 - list: 2024
   goal: 16
