--- a/_data/oias.yml
+++ b/_data/oias.yml
@@ -1,3 +1,12 @@
+- title: Deaths attributed to the contraceptive pill each year?
+  url: https://fyi.org.nz/request/16965-deaths-attributed-to-the-contraceptive-pill-each-year
+  added: 2025-01-20
+  description: |
+    The actual request itself was not something I had ever considered, and the answer is zero deaths.
+    However, what was interesting was the mention of the International Statistical Classification
+    of Diseases and Related Health Problems. I had never heard of it before but it's essentially an
+    index of all the different categories of death which each have a code assigned to them.
+
 - title: Digital Identity Trust Framework Bill public engagement
   url: https://fyi.org.nz/request/20603-digital-identity-trust-framework-bill-public-engagement
   added: 2025-01-09
