Add start date for Amusing Ourselves To Death
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -8,6 +8,7 @@
       cover_height: 2560
       cover_width: 1693
       link: https://www.penguinrandomhouse.com/books/297276/amusing-ourselves-to-death-by-neil-postman/
+      date_started: 2024-12-31
       date_finished: 2025-01-20
       recommended: true
       progress: 100
