--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,6 +1,18 @@
 - list: 2025
   goal: 18
   books:
+    - title: Designing Data-Intensive Applications
+      subtitle: The Big Ideas Behind Reliable, Scalable, and Maintainable Systems
+      author: Martin Kleppman
+      cover: https://cdn.utf9k.net/books/designing-data-intensive-applications.jpg
+      cover_height: 1575
+      cover_width: 1200
+      link: https://dataintensive.net
+      date_started: 2022-07-05
+      date_finished: null
+      recommended: false
+      progress: 8
+
     - title: Moral Mazes
       subtitle: The World of Corporate Managers
       author: Robert Jackall
@@ -11,7 +23,7 @@
       date_started: 2025-01-25
       date_finished: null
       recommended: false
-      progress: 2
+      progress: 7
 
     - title: Amusing Ourselves to Death
       subtitle: Public Discourse in the Age of Show Business
