--- a/_data/oias.yml
+++ b/_data/oias.yml
@@ -1,3 +1,10 @@
+- title: Longest learner license in New Zealand
+  url: https://fyi.org.nz/request/28319-longest-learner-license-driver-in-nz
+  added: 2025-02-01
+  description: |
+    As it says on the tin, the longest period that someone has gone on their
+    learner's license is over 40 years!
+
 - title: Deaths attributed to the contraceptive pill each year?
   url: https://fyi.org.nz/request/16965-deaths-attributed-to-the-contraceptive-pill-each-year
   added: 2025-01-20
