Added some OIAs
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_data/oias.yml
+++ b/_data/oias.yml
@@ -1,3 +1,29 @@
+- title: Carplay and Android Auto cutting out
+  url: https://fyi.org.nz/request/29133-carplay-and-android-auto-cutting-out
+  added: 2025-02-02
+  description: |
+    This was a request about Apple Carplay and Android Auto allegedly cutting out in the Tamaki Drive area, as
+    well as some other locations. Radio Spectrum Management (RSM) had a look and weren't able to replicate the
+    issue at all. They did also note that WiFi and Bluetooth call under a General User Radio License (GURL) so
+    there has to be repeated reports for any given incident to cross the threshold for investigating. While the
+    only claim about this issue is a single Reddit thread, and groups have known to mass-hallucinate events,
+    it is an interesting story regardless. Personally I don't own a car so I wouldn't have any way of trying to
+    replicate these issues but it does bring to mind a couple of cases where I've had Bluetooth earbuds glitch
+    out, usually around the same areas. I had always put it down to a density issue so perhaps there could be
+    heavier equipment at place. One Redditor claimed that CCTV backhaul and NZTA/AT traffic monitoring has been
+    identified as being at play but didn't provide any evidence of those claims.
+
+- title: Beehive Roleplay Online Gaming Community and Fire Emergency New Zealand
+  url: https://fyi.org.nz/request/27998-beehive-roleplay-online-gaming-community-and-fire-emergency-new-zealand
+  added: 2025-02-02
+  description: |
+    There is a gaming community called Beehive Roleplay who roleplay as emergency services using FiveM, a
+    multiplayer mod for Grand Theft Auto V running on dedicated servers. In order to have their simulation
+    be as accurate as possible, in-game vehicles are branded with real-life branding such as those used by
+    Fire and Emergency NZ (FENZ). At the time of the request, it seems that while FENZ had asked Beehive RP
+    whether they had permission, a lot of it was still covered by legal privilege as to whether a cease
+    and desist was filed.
+
 - title: Longest learner license in New Zealand
   url: https://fyi.org.nz/request/28319-longest-learner-license-driver-in-nz
   added: 2025-02-01
