Added more OIAs and regen lock file
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_data/oias.yml
+++ b/_data/oias.yml
@@ -1,3 +1,24 @@
+- title: Requesting complete list of self-help management books prescribed to ministers and public department heads by Prime Minister Christopher Luxon
+  url: https://fyi.org.nz/request/26981-requesting-complete-list-of-self-help-management-books-prescribed-to-ministers-and-public-department-heads-by-prime-minister-christopher-luxon
+  added: 2025-02-02
+  description: |
+    Prime Minster Christopher Luxon sat down in a <a href="https://www.nzherald.co.nz/nz/politics/pm-christopher-luxon-and-finance-minister-nicola-willis-joint-interview-how-they-operate-and-a-budget-of-surprises-and-bold-moves/DXHNGF4LYNEPZGAZWQ3UOMMCKE/">2024 joint interview</a>
+    with Finance Minister Nicola Willis and the New Zealand Herald. Nicola mentioned that Chris Luxon
+    had assigned a list of "self-help management books" to public department heads but that she had
+    not personally read them. This request uncovered the names of those books which were
+    Good to Great, The First 90 Days and The Five Dysfunctions of a Team.
+
+- title: How many tenants have requested a transfer after being disturbed by inexplicable activity
+  url: https://fyi.org.nz/request/8940-how-many-tenants-have-requested-a-transfer-after-being-disturbed-by-inexplicable-activity
+  added: 2025-02-02
+  description: |
+    This person wanted to know how many Kainga Ora (Housing New Zealand) tenants have been relocated or
+    filed complaints in regards to houses being "haunted" over a five year period. They were unable to
+    perform a free-text search as each office houses different files so there is seemingly no centralised
+    way to query all case files. As a result, we don't definitively know that there have never been any
+    transfers due to hauntings. Upon closer inspection, it seems that the requestor would go on to become
+    slightly <a href="https://www.nzherald.co.nz/nz/rnz-scandal-more-changes-to-reuters-content-found-with-palestine-china-north-korea-stories-also-edited/EPZEPOYKYRHVTDKTVBYCVA72ZA/">infamous</a>.
+
 - title: Carplay and Android Auto cutting out
   url: https://fyi.org.nz/request/29133-carplay-and-android-auto-cutting-out
   added: 2025-02-02
